--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pnpm": ">=7"
   },
   "dependencies": {
-    "@babel/core": "^7.24.5"
+    "@babel/core": "^7.24.5",
+    "@babel/helper-plugin-utils": "^7.24.5"
   }
 }
